src/test/deca/context/invalid/added/void_var.deca
// Doit lever une exception de vérification contextuelle

{
    int x;
    void y;
}